--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             width: 10%;
             margin: 20px 0;
         }
+        <div>
+    <button onclick="filterIcons('all')">All</button>
+    <button onclick="filterIcons('food')">Food</button>
+    <button onclick="filterIcons('koffie')">Koffie</button>
+    <button onclick="filterIcons('nonfood')">Nonfood</button>
+</div>
+
     </style>
 </head>
 <body>
