--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
         h1 {
             font-size: 24px;
         }
-        h2 {
-            font-size: 20px;
-            margin-top: 30px;
-        }
         .gallery {
             display: flex;
             flex-wrap: wrap;
@@ -61,13 +57,9 @@
     <label for="size-slider">Icon Size:</label>
     <input type="range" id="size-slider" class="slider" min="30" max="200" value="30" aria-label="Adjust icon size">
 
-    <h2>Food Icons</h2>
+    <!-- Combined gallery div for all grouped icons -->
     <div class="gallery" id="food-gallery"></div>
-
-    <h2>Koffie Icons</h2>
     <div class="gallery" id="koffie-gallery"></div>
-
-    <h2>Non Food Icons</h2>
     <div class="gallery" id="nonfood-gallery"></div>
 
     <script>
