--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             'Pan_Icon_AH_filled.svg',
             'Pan_Icon_AH_outlined.svg',
             'Stamper-AH-outlined.svg',
-            'Stoommandje-AH-Outlined.svg'
+            'Stoommandje-AH-Outlined.svg',
             'Microwave_Icon_AH_filled.svg',
             'Microwave_Icon_AH_outlined.svg',
             'Staafmixer_Icon_AH_filled.svg',
@@ -96,7 +96,7 @@
             'Waterdruppel_Icon_AH_filled.svg',
             'Waterdruppel_Icon_AH_outlined.svg',
             'AuBainMarie-AH-outlined.svg',
-            'Broodrooster-AH-outlined.svg',
+            'Broodrooster-AH-outlined.svg'
         ];
 
         const koffieIcons = [
