--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
         /* Style for the divider */
         hr {
-            border: 1px solid #ccc;
+            border: 1px solid #E7E9EB;
             width: 100%;
             margin: 20px auto;
         }
