--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         }
         /* Style for the divider */
         hr {
-            border: 1px solid #ccc;
-            width: 80%;
+            border: 1px solid #F0F1F0;
+            width: 100%;
             margin: 20px auto;
         }
     </style>
