--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 
         const nonFoodIcons = [
             'Klok-AH-outlined.svg',
+            'Ocean-_Friendly_Ah_Icon.svg',
             'Timer-5-mintuten-AH-outline.svg'
         ];
 
