--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
 
         const nonFoodIcons = [
             'Klok-AH-outlined.svg',
-            'Ocean_Friendly_AH_Icon.svg',
-            'Timer-5-mintuten-AH-outline.svg'
+            'Ocean_Friendly_AH_Icon.svg'
+           
         ];
 
         const foodGallery = document.getElementById('food-gallery');
